fixed tag input handler margin to align with the other input fields

--- a/src/InterviewQ/components/DashInterviewQ/subs/CoachDash.scss
+++ b/src/InterviewQ/components/DashInterviewQ/subs/CoachDash.scss
@@ -225,5 +225,7 @@ input:focus#edit-post-4 {
 	display: flex;
 	align-items: flex-start;
 	margin-top: .5rem;
+	padding: 1.5rem 2.4rem;
+	margin-left: 1.1rem;
 }
 
